--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_TYPE=sqlite
 # MYSQL_USER=sanhub
 # MYSQL_PASSWORD=your-mysql-password
 # MYSQL_DATABASE=sanhub
+# MYSQL_POOL_SIZE=20
 
 # ===================
 # Admin Account (first run)
